# TriMultPoly

./: CMakeLists.txt  README.txt
ExternalLibs/tetgen/tetgen1.4.3/inc/: readme.txt  tetgen.h
ExternalLibs/tetgen/tetgen1.4.3/lib/VS2010/: tetgen64.lib
ExternalLibs/tetgen/tetgen1.4.3/src/: tetgen.h
ExternalLibs/tetgen/tetgen1.4.3/test/: example_tetcall.cxx  tetcall.cxx
src/: MWT.sln  MWT.vcxproj  MWT.vcxproj.filters  main.cpp
src/Algorithm/: DMWT.cpp  DMWT.h
src/DataStructure/: Boundary.cpp  Boundary.h  CurveInfo.cpp  CurveInfo.h  EdgeInfo.cpp  EdgeInfo.h  Hole.cpp  Hole.h  SubKey.h  Tile.cpp  Tile.h  TriangleInfo.cpp  TriangleInfo.h
src/Utility/: Configure.h  Vector3.cpp  Vector3.h
